--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
   --color_pri:#009EE2;
   --txt_cta_light:#FFFFFF;
   --txt_cta_dark:#3D3D3D;
+  --txt_cuerpo:#3D3D3D;
+  --active_link:#009EE2;
   --bg_cta_lightblue:#009EE2;
   --bg_cta_light:#FFFFFF;
-  --txt_cuerpo:#3D3D3D;
   --icon_light:#FFFFFF;
   --icon_lightblue:#009EE2;
   --icon_lightblue_hover:#0084e2;
@@ -18,6 +19,12 @@
 html {
   scroll-behavior: smooth;
   font-family: var(--font);
+  color: var(--txt_cuerpo);
+}
+
+a {
+  text-decoration: none;
+  color: #282828;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -51,26 +58,26 @@ header .c_header_pri {
   padding: 20px 0;
   box-sizing: border-box;
 }
-header .idiomas {
+header .idiomas, header .idiomasMobile {
   justify-self: flex-start;
   display: flex;
   gap: 10px;
 }
-header .idiomas a {
+header .idiomas a, header .idiomasMobile a {
   font-size: 14px;
   color: var(--txt_cta_dark);
   text-decoration: none;
   opacity: 0.6;
   transition: 300ms ease;
 }
-header .idiomas a:hover {
+header .idiomas a:hover, header .idiomasMobile a:hover {
   opacity: 1;
 }
-header .idiomas a:last-child {
+header .idiomas a:last-child, header .idiomasMobile a:last-child {
   border-left: 1px solid #CCCCCC;
   padding-left: 10px;
 }
-header .idiomas a.active {
+header .idiomas a.active, header .idiomasMobile a.active {
   text-decoration: underline;
   opacity: 1;
 }
@@ -96,4 +103,291 @@ header .redes_header a {
 }
 header .redes_header a:hover {
   background-color: var(--icon_lightblue_hover);
+}
+header .header_nav {
+  display: flex;
+  justify-content: center;
+}
+header .header_nav .navbar ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+header .header_nav .navbar ul li {
+  position: relative;
+}
+header .header_nav .navbar ul li a {
+  font-size: 14px;
+  color: var(--txt_cta_dark);
+  padding: 10px;
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+header .header_nav .navbar ul li a span {
+  transition: 300ms ease-out;
+  margin-left: 10px;
+}
+header .header_nav .navbar ul li a::before {
+  content: "";
+  position: absolute;
+  right: -10px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 20px;
+  width: 1px;
+  background-color: #CCCCCC;
+}
+header .header_nav .navbar ul li a.active {
+  color: var(--active_link);
+}
+header .header_nav .navbar ul li a.active span {
+  transform: rotate(180deg);
+}
+header .header_nav .navbar ul li .submenu {
+  position: absolute;
+  left: calc(50% - 120px);
+  right: 0;
+  top: 40px;
+  background-color: white;
+  display: none;
+  width: 100%;
+  min-width: 240px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1098039216);
+}
+header .header_nav .navbar ul li .submenu a::before {
+  display: none;
+}
+header .header_nav .navbar ul li .cont_search {
+  position: absolute;
+  right: 0;
+  top: 10px;
+  display: flex;
+  align-items: center;
+  background-color: var(--bg_section);
+  border: 1px solid rgb(244, 244, 244);
+  gap: 10px;
+  padding: 8px;
+  border-radius: 24px;
+  display: none;
+}
+header .header_nav .navbar ul li .cont_search input {
+  outline: 0;
+  background-color: transparent;
+  border: 0;
+  height: 30px;
+  box-sizing: border-box;
+}
+header .header_nav .navbar ul li .cont_search .search {
+  border: 0;
+  background-color: #FFF;
+  color: #282828;
+  border-radius: 100px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+header .header_nav .navbar ul .search-icon span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  color: #474747;
+  cursor: pointer;
+  transition: 300ms ease;
+}
+header .header_nav .navbar ul .search-icon span:hover {
+  color: var(--color_pri);
+}
+header .header_nav.active {
+  transform: translateX(0%);
+}
+
+.idiomasMobile {
+  display: none;
+}
+
+.mobile_items {
+  display: none;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+  font-size: 20px;
+}
+.mobile_items a {
+  cursor: pointer;
+  padding: 0 8px;
+  color: var(--icon_lightblue);
+}
+
+.spacer {
+  display: block;
+  width: 100%;
+  height: 130px;
+}
+
+.label_mobile {
+  display: none;
+}
+
+.closeX {
+  display: none;
+  justify-self: flex-end;
+  justify-items: flex-end;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  margin-right: 0;
+  font-size: 28px;
+  color: var(--icon_lightblue);
+}
+.closeX span {
+  font-weight: 300;
+}
+
+.list_social_mobile {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 20px 0;
+}
+.list_social_mobile a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bg_cta_lightblue);
+  border-radius: 100px;
+  width: 30px;
+  height: 30px;
+  color: var(--icon_light);
+  text-decoration: none;
+}
+
+footer {
+  background-color: var(--bg_footer);
+  padding: 50px 0 0;
+}
+footer .subfooter {
+  text-align: center;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 1050px) {
+  .spacer {
+    height: 70px;
+  }
+
+  .list_social_mobile {
+    display: flex;
+  }
+
+  .search-icon {
+    display: none;
+  }
+
+  .mobile_items {
+    display: flex;
+  }
+
+  header .redes_header, header .idiomas {
+    display: none;
+  }
+
+  header .c_header_pri {
+    justify-content: space-between;
+    grid-template-columns: 1fr 3fr;
+  }
+
+  header .logo_header {
+    justify-self: flex-start;
+  }
+
+  header .header_nav {
+    position: fixed;
+    width: 90%;
+    height: 100%;
+    background-color: var(--bg_general);
+    right: 0;
+    top: 0;
+    transition: 300ms ease-out;
+    transform: translateX(100%);
+    padding: 20px 30px 30px;
+    box-sizing: border-box;
+  }
+
+  header .header_nav .navbar ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .header_nav nav {
+    width: 100%;
+  }
+
+  header .header_nav .navbar ul li {
+    width: 100%;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 10px;
+  }
+
+  header .header_nav .navbar ul li .submenu {
+    position: initial;
+    border: 0;
+  }
+
+  header .header_nav .navbar ul li a {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+  }
+
+  header .header_nav .navbar ul li a::before {
+    display: none;
+  }
+
+  .label_mobile {
+    display: inline-block;
+  }
+
+  .closeX {
+    display: flex;
+  }
+
+  header .header_nav .navbar ul li a.item_pago_pse {
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .idiomasMobile {
+    justify-self: flex-start;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    padding: 10px 0px 10px 21px;
+  }
+
+  header .header_nav .navbar ul li .submenu li {
+    border: 0;
+    padding: 0 0 0 20px;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 480px) {
+  header .header_nav {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
