--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,8 +3,10 @@
     --color_pri:#009EE2;
 
     --txt_cta_light:#FFFFFF;
+    --txt_cta_lightblue:#009EE2;
     --txt_cta_dark:#3D3D3D;
     --txt_cuerpo:#3D3D3D;
+    --txt_cuerpo_light:#FFFFFF;
     --active_link:#009EE2;
     --bg_cta_lightblue:#009EE2;
     --bg_cta_light:#FFFFFF;
@@ -82,6 +84,7 @@ header{
     }
     .logo_header{
         justify-self: center;
+        display: inline-block;
     }
     .redes_header{
         justify-self: flex-end;
@@ -278,12 +281,129 @@ header{
 footer{
     background-color: var(--bg_footer);
     padding: 50px 0 0;
+    box-sizing: border-box;
+    .s_footer{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        align-items: flex-start;
+        gap: 40px;
+        padding: 0 0 40px;
+        box-sizing: border-box;
+        ul{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            li{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                a{
+                    padding: 8px 0;
+                    box-sizing: border-box;
+                    width: 100%;
+                    color: var(--txt_cuerpo_light);
+                    opacity: 0.4;
+                    transition: 300ms ease;
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+    .logo_footer{
+        display: inline-block;
+        margin-bottom: 20px;
+    }
+    h4{
+        margin: 0 0 10px;
+        color: var(--txt_cuerpo_light);
+        position: relative;
+        &::before{
+            content: '\f077';
+            position: absolute;
+            font-family: 'Font Awesome 5 Pro';
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            width: 20px;
+            height: 20px;
+            display: none;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    h1{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 1.5;
+        color: var(--txt_cuerpo_light);
+        opacity: 0.4;
+        margin: 0 0 20px;
+    }
+    .direccion_bl{
+        color: var(--txt_cuerpo_light);
+        opacity: 0.4;
+        margin-bottom: 20px;
+    }
+    .tel_bl{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: var(--txt_cuerpo_light);
+        a{
+            color: var(--txt_cuerpo_light);
+            opacity: 0.4;
+            transition: 300ms ease;
+            &:hover{
+                opacity: 1;
+            }
+        }
+    }
+    .redes_footer{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 10px;
+        margin: 20px 0 0;
+        a{
+            width: 30px;
+            height: 30px;
+            border-radius: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: var(--bg_cta_light);
+            opacity: 0.4;
+            transition: 300ms ease;
+            &:hover{
+                opacity: 1;
+            }
+        }
+    }
     .subfooter{
         text-align: center;
         font-size: 14px;
+        padding: 20px 0;
+        box-sizing: border-box;
+        color: var(--txt_cuerpo_light);
     }
 }
-
+#realizar_pago{
+    background-color: var(--bg_cta_light);
+    border-radius: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    padding: 8px 12px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    color: var(--txt_cta_lightblue);
+    font-weight: 700;
+}
 
 
 
@@ -376,10 +496,39 @@ footer{
         border: 0;
         padding: 0 0 0 20px;
         box-sizing: border-box;
-        
     }
 }
 @media screen and (max-width:768px){
+    header .logo_header a img{
+        width: 160px;
+    }
+    footer h4{
+        padding: 4px 0;
+        &::before{
+            display: inline-flex;
+            transition: 300ms ease-out;
+        }
+        &.rotate_icon{
+            &::before{
+                transform: rotate(180deg);
+            }
+        }
+    }
+    .col_footer:last-child h4{
+        &::before{
+            display: none;
+        }
+    }
+    footer .s_footer{
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    footer .s_footer ul{
+        display: none;
+    }
+    .col_footer:first-child{
+        margin-bottom: 20px;
+    }
 }
 @media screen and (max-width:480px){
     header .header_nav{
