--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ header .header_nav.active {
 }
 
 .idiomasMobile {
-  display: none;
+  display: none !important;
 }
 
 .mobile_items {
@@ -281,7 +281,7 @@ header .header_nav.active {
 
 footer {
   background-color: var(--bg_footer);
-  padding: 50px 0 0;
+  padding: 0;
   box-sizing: border-box;
 }
 footer .s_footer {
@@ -407,6 +407,43 @@ footer .subfooter {
   font-weight: 700;
 }
 
+.s_medios_pago {
+  width: 100%;
+  padding: 20px 0;
+  box-sizing: border-box;
+  background-color: var(--bg_general);
+  margin-bottom: 60px;
+}
+.s_medios_pago .c_medios_pago {
+  display: flex;
+  gap: 20px;
+}
+.s_medios_pago .c_medios_pago h5 {
+  margin: 0;
+  max-width: 65px;
+  border-right: 1px solid rgb(230, 230, 230);
+  font-weight: 400;
+  font-size: 16px;
+  padding-right: 20px;
+}
+.s_medios_pago .logos_medios {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.s_medios_pago .logos_medios picture {
+  display: inline-block;
+}
+.s_medios_pago .logos_medios picture img {
+  width: 100%;
+  height: 100%;
+  min-width: 150px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 @media screen and (max-width: 1050px) {
   .spacer {
     height: 70px;
@@ -507,6 +544,10 @@ footer .subfooter {
     padding: 0 0 0 20px;
     box-sizing: border-box;
   }
+
+  .idiomasMobile {
+    display: flex !important;
+  }
 }
 @media screen and (max-width: 768px) {
   header .logo_header a img {
@@ -539,6 +580,18 @@ footer .subfooter {
 
   .col_footer:first-child {
     margin-bottom: 20px;
+  }
+
+  .s_medios_pago .c_medios_pago {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .s_medios_pago .c_medios_pago h5 {
+    max-width: initial;
+    text-align: center;
+    border: 0;
+    padding: 0;
   }
 }
 @media screen and (max-width: 480px) {
