--- a/sass/style.scss
+++ b/sass/style.scss
@@ -222,7 +222,7 @@ header{
     }
 }
 .idiomasMobile{
-    display: none;
+    display: none!important;
 }
 .mobile_items{
     display: none;
@@ -280,7 +280,7 @@ header{
 
 footer{
     background-color: var(--bg_footer);
-    padding: 50px 0 0;
+    padding:0;
     box-sizing: border-box;
     .s_footer{
         display: grid;
@@ -405,6 +405,48 @@ footer{
     font-weight: 700;
 }
 
+.s_medios_pago{
+    width: 100%;
+    padding: 20px 0;
+    box-sizing: border-box;
+    background-color: var(--bg_general);
+    margin-bottom: 60px;
+    .c_medios_pago{
+        display: flex;
+        gap: 20px;
+        h5{
+            margin: 0;
+            max-width: 65px;
+            border-right: 1px solid rgb(230, 230, 230);
+            font-weight: 400;
+            font-size: 16px;
+            padding-right: 20px;
+        }
+    }
+    .logos_medios{
+        overflow-x: scroll;
+        overflow-y: hidden;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        picture{
+            display: inline-block;
+            img{
+                width: 100%;
+                height: 100%;
+                min-width: 150px;
+                object-fit: contain;
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
 
 
 
@@ -497,6 +539,9 @@ footer{
         padding: 0 0 0 20px;
         box-sizing: border-box;
     }
+    .idiomasMobile{
+        display: flex!important;
+    }
 }
 @media screen and (max-width:768px){
     header .logo_header a img{
@@ -528,6 +573,16 @@ footer{
     }
     .col_footer:first-child{
         margin-bottom: 20px;
+    }
+    .s_medios_pago .c_medios_pago{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .s_medios_pago .c_medios_pago h5{
+        max-width: initial;
+        text-align: center;
+        border: 0;
+        padding: 0;
     }
 }
 @media screen and (max-width:480px){
