--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,9 @@ html{
     font-family: var(--font);
     color:var(--txt_cuerpo)
 }
+*{
+    -webkit-font-smoothing: antialiased;
+}
 a{
     text-decoration: none;
     color: #282828;
@@ -41,6 +44,49 @@ h1, h2, h3, h4, h5, h6{
     padding: 0 20px;
     box-sizing: border-box;
 }
+
+.c_cta{
+    display: flex;
+    justify-content: center;
+}
+
+.btn{
+    width: max-content;
+    padding: 10px 40px;
+    border-radius: 100px;
+    background-color: #DADADA;
+    font-weight: 700;
+    font-size: 18px;
+    position: relative;
+/*     overflow: hidden; */
+    &::before{
+        content: '';
+        position: absolute;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+        top: calc(50% - 30px);
+        height: 50px;
+        width: 30px;
+        transition: 300ms ease;
+        transform: skewX(0deg);
+        background-color: rgba(255, 255, 255, 0.319);
+        filter: blur(20px);
+        opacity: 0;
+    }
+    &.lightblue{
+        background-color: var(--bg_cta_lightblue);
+        color: var(--txt_cta_light);
+    }
+    &:hover{
+        &::before{
+            width: 160px;
+            opacity: 1;
+        }
+    }
+}
+/* *********** */
+
 header{
     position: fixed;
     width: 100%;
@@ -441,10 +487,44 @@ footer{
     }
 }
 
+/* 404 */
 
+.s_gracias{
+    padding: 0 0 120px;
+    box-sizing: border-box;
+}
+.c_gracias{
+    picture{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 60px 20px 60px;
+        box-sizing: border-box;
+        width: 100%;
+        background-color: #E7F7F8;
+        margin: 0 0 40px;
+        img{
+            max-width: 365px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        h3{
+            font-size: 2em;
+            color: var(--txt_cta_lightblue);
+        }
+    }
+    h4{
+        text-align: center;
+        font-weight: 400;
+        max-width: 400px;
+        margin: 0 auto 30px;
+        line-height: 1.4;
+        font-size: 20px;
+    }
+}
 
-
-
+/* ****** */
 
 
 
@@ -589,5 +669,7 @@ footer{
     header .header_nav{
         width: 100%;
     }
-
+    .s_gracias{
+        padding: 0 0 50px;
+    }
 }
