--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@
   --font:"Inter", sans-serif;
 }
 
+::-moz-selection {
+  background-color: var(--color_pri);
+  color: var(--txt_cuerpo_light);
+}
+
+::selection {
+  background-color: var(--color_pri);
+  color: var(--txt_cuerpo_light);
+}
+
 html {
   scroll-behavior: smooth;
   font-family: var(--font);
@@ -35,6 +45,34 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
+  color: #033448;
+}
+
+.tit_section {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.s_texture {
+  position: relative;
+}
+.s_texture::before, .s_texture:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 704px;
+  width: 444px;
+  background: url("../images/diseno/01-home/fondo_secciones.svg") no-repeat left center;
+  background-size: contain;
+  z-index: -1;
+}
+.s_texture:after {
+  left: initial;
+  right: 0;
+  background: url("../images/diseno/01-home/fondo_secciones2.svg") no-repeat right center;
 }
 
 .center {
@@ -49,6 +87,23 @@ h1, h2, h3, h4, h5, h6 {
 .c_cta {
   display: flex;
   justify-content: center;
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+
+.cta_whatsapp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 35px;
+  background-color: #8CE38A;
+  border-radius: 100px;
+  width: 60px;
+  height: 60px;
+  color: var(--txt_cta_light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn {
@@ -61,7 +116,19 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   font-size: 18px;
   position: relative;
-  /*     overflow: hidden; */
+  overflow: hidden;
+}
+.btn.cta_reserva_cita {
+  position: fixed;
+  right: 0;
+  top: 30%;
+  border-radius: 100px 0 0 100px;
+  background-color: var(--bg_cta_lightblue);
+  color: var(--txt_cta_light);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 4px 12px;
 }
 .btn::before {
   content: "";
@@ -85,6 +152,39 @@ h1, h2, h3, h4, h5, h6 {
 .btn:hover::before {
   width: 160px;
   opacity: 1;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.al_left {
+  justify-content: flex-start;
+}
+
+.al_center {
+  justify-content: center;
+}
+
+.al_right {
+  justify-content: flex-end;
 }
 
 /* *********** */
@@ -491,12 +591,12 @@ footer .subfooter {
 }
 
 /* 404 */
-.s_gracias {
+.s_404 {
   padding: 0 0 120px;
   box-sizing: border-box;
 }
 
-.c_gracias picture {
+.c_404 picture {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -506,24 +606,156 @@ footer .subfooter {
   background-color: #E7F7F8;
   margin: 0 0 40px;
 }
-.c_gracias picture img {
+.c_404 picture img {
   max-width: 365px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.c_gracias picture h3 {
+.c_404 picture h3 {
   font-size: 2em;
   color: var(--txt_cta_lightblue);
 }
-.c_gracias h4 {
+.c_404 h4 {
   text-align: center;
   font-weight: 400;
   max-width: 400px;
   margin: 0 auto 30px;
   line-height: 1.4;
   font-size: 20px;
+}
+
+/* ****** */
+/* HOME */
+.s_hero {
+  background: linear-gradient(0deg, rgba(2, 31, 44, 0.92), rgba(2, 31, 44, 0.92)), linear-gradient(0deg, #021F2C, #021F2C), url("../images/diseno/01-home/img_hero_bg.png") no-repeat center;
+  background-blend-mode: normal, color, normal;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  box-sizing: border-box;
+}
+.s_hero .swiper-pagination {
+  background-color: #FFF;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 8px 30px 4px;
+  box-sizing: border-box;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: 0;
+  border-radius: 8px 8px 0 0;
+}
+.s_hero .swiper-pagination .swiper-pagination-bullet {
+  width: 14px;
+  height: 14px;
+}
+.s_hero .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: var(--color_pri);
+}
+
+.sliderHero .cont_gen_slider {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  align-items: center;
+  height: 100%;
+  padding: 0 0 0 180px;
+}
+.sliderHero .cont_gen_slider picture {
+  height: 100%;
+  display: inline-block;
+  overflow-y: hidden;
+}
+.sliderHero .cont_gen_slider picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.c_txt_slider {
+  text-align: left;
+  color: var(--txt_cta_light);
+}
+.c_txt_slider h2 {
+  text-transform: uppercase;
+  color: var(--txt_cta_light);
+  font-size: 4em;
+  line-height: 1;
+  margin: 0 0 20px;
+}
+.c_txt_slider h2 span {
+  color: var(--txt_cta_lightblue);
+}
+.c_txt_slider .txt_desc_slider {
+  font-size: 20px;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+
+.s_nuestros_serv {
+  padding: 80px 0 130px;
+}
+
+.c_nuestros_serv {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 24px;
+}
+
+.card_serv {
+  position: relative;
+  max-width: 250px;
+  width: 100%;
+  min-width: 200px;
+  min-height: 266px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 6px;
+  overflow: hidden;
+}
+.card_serv picture {
+  position: absolute;
+  inset: 0;
+  display: inline-block;
+}
+.card_serv picture::before {
+  content: "";
+  transition: 300ms ease;
+  opacity: 0.4;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 70%);
+}
+.card_serv picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card_serv .txt_serv {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+.card_serv .txt_serv h3 {
+  color: var(--txt_cta_light);
+}
+.card_serv .txt_serv .btn {
+  margin: 0 auto -41px;
+  transition: 300ms ease-out;
+}
+.card_serv:hover picture:before {
+  opacity: 1;
+}
+.card_serv:hover .btn {
+  margin: 0 auto 10px;
 }
 
 /* ****** */
@@ -682,7 +914,7 @@ footer .subfooter {
     width: 100%;
   }
 
-  .s_gracias {
+  .s_404 {
     padding: 0 0 50px;
   }
 }/*# sourceMappingURL=style.css.map */
