--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,10 @@
     --bg_footer:#102128;
     --font:'Inter', sans-serif;
 }
+::selection{
+    background-color: var(--color_pri);
+    color: var(--txt_cuerpo_light);
+}
 html{
     scroll-behavior:smooth;
     font-family: var(--font);
@@ -35,6 +39,32 @@ a{
 }
 h1, h2, h3, h4, h5, h6{
     font-weight: 700;
+    color: #033448;
+}
+.tit_section{
+    font-size: 2rem;
+    text-align: center;
+}
+.s_texture{
+    position: relative;
+    &::before, &:after{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        height: 704px;
+        width: 444px;
+        background: url('../images/diseno/01-home/fondo_secciones.svg') no-repeat left center;
+        background-size: contain;
+        z-index: -1;
+    }
+    &:after{
+        left: initial;
+        right: 0;
+        background: url('../images/diseno/01-home/fondo_secciones2.svg') no-repeat right center;
+    }
 }
 .center{
     width: 100%;
@@ -48,8 +78,23 @@ h1, h2, h3, h4, h5, h6{
 .c_cta{
     display: flex;
     justify-content: center;
+    padding: 20px 0;
+    box-sizing: border-box;
 }
-
+.cta_whatsapp{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 35px;
+    background-color: #8CE38A;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    color: var(--txt_cta_light);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .btn{
     width: max-content;
     padding: 10px 40px;
@@ -58,7 +103,19 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
     font-size: 18px;
     position: relative;
-/*     overflow: hidden; */
+    overflow: hidden;
+    &.cta_reserva_cita{
+        position: fixed;
+        right: 0;
+        top: 30%;
+        border-radius: 100px 0 0 100px;
+        background-color: var(--bg_cta_lightblue);
+        color: var(--txt_cta_light);
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        padding: 4px 12px;
+    }
     &::before{
         content: '';
         position: absolute;
@@ -85,6 +142,48 @@ h1, h2, h3, h4, h5, h6{
         }
     }
 }
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.al_left{
+    justify-content: flex-start;
+}
+.al_center{
+    justify-content: center;
+}
+.al_right{
+    justify-content: flex-end;
+}
+
+
 /* *********** */
 
 header{
@@ -489,11 +588,11 @@ footer{
 
 /* 404 */
 
-.s_gracias{
+.s_404{
     padding: 0 0 120px;
     box-sizing: border-box;
 }
-.c_gracias{
+.c_404{
     picture{
         display: flex;
         flex-direction: column;
@@ -525,9 +624,136 @@ footer{
 }
 
 /* ****** */
+/* HOME */
 
 
+.s_hero{
+    background: linear-gradient(0deg, rgba(2, 31, 44, 0.92), rgba(2, 31, 44, 0.92)), linear-gradient(0deg, #021F2C, #021F2C), url('../images/diseno/01-home/img_hero_bg.png') no-repeat center;
+    background-blend-mode: normal, color, normal;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    box-sizing: border-box;
+    .swiper-pagination{
+        background-color: #FFF;
+        width: max-content;
+        padding: 8px 30px 4px;
+        box-sizing: border-box;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        bottom: 0;
+        border-radius: 8px 8px 0 0;
+        .swiper-pagination-bullet{
+            width: 14px;
+            height: 14px;
+        }
+        .swiper-pagination-bullet-active{
+            background-color: var(--color_pri);
+        }
+    }
+}
+.sliderHero .cont_gen_slider{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    align-items: center;
+    height: 100%;
+    padding: 0 0 0 180px;
+    picture{
+        height: 100%;
+        display: inline-block;
+        overflow-y: hidden;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+.c_txt_slider{
+    text-align: left;
+    color: var(--txt_cta_light);
+    h2{
+        text-transform: uppercase;
+        color: var(--txt_cta_light);
+        font-size: 4em;
+        line-height: 1;
+        margin: 0 0 20px;
+        span{
+            color: var(--txt_cta_lightblue);
+        }
+    }
+    .txt_desc_slider{
+        font-size: 20px;
+        line-height: 1.3;
+        margin-bottom: 20px;
+    }
+}
 
+.s_nuestros_serv{
+    padding: 80px 0 130px;
+}
+.c_nuestros_serv{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 24px;
+}
+.card_serv{
+    position: relative;
+    max-width: 250px;
+    width: 100%;
+    min-width: 200px;
+    min-height: 266px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-radius: 6px;
+    overflow: hidden;
+    picture{
+        position: absolute;
+        inset: 0;
+        display: inline-block;
+        &::before{
+            content: '';
+            transition: 300ms ease;
+            opacity: .4;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, #00000000 0%, #000000cc 70%);
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .txt_serv{
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        h3{
+            color: var(--txt_cta_light);
+        }
+        .btn{
+            margin: 0 auto -41px;
+            transition: 300ms ease-out;
+        }
+    }
+    &:hover{
+        picture{
+            &:before{
+                opacity: 1;
+            }
+        }
+        .btn{
+            margin: 0 auto 10px;
+        }
+    }
+}
+
+/* ****** */
 
 
 
@@ -669,7 +895,7 @@ footer{
     header .header_nav{
         width: 100%;
     }
-    .s_gracias{
+    .s_404{
         padding: 0 0 50px;
     }
 }
