ajustes iniciales responsive Int Quienes somos

--- a/css/style.css
+++ b/css/style.css
@@ -1341,6 +1341,13 @@ footer .subfooter {
   height: 70%;
 }
 
+.head_desc_int {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 12px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
 .s_items_slider {
   padding: 60px 0;
   box-sizing: border-box;
@@ -1474,6 +1481,7 @@ button[type=submit] {
   height: 100%;
   cursor: pointer;
   font-weight: 700;
+  min-width: 130px;
 }
 
 .navtabs_pri ul {
@@ -1541,6 +1549,7 @@ button[type=submit] {
   display: grid;
   grid-template-columns: minmax(200px, 285px) 1fr;
   margin: 40px 0 0;
+  position: relative;
 }
 .cont_tab_pri .navtab_sec {
   margin: 20px 0 0;
@@ -1629,6 +1638,15 @@ button[type=submit] {
   display: inline-block;
   text-align: center;
   margin: 0 0 10px;
+}
+
+.mMobile_tab_sec {
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.mMobile_tab_sec span {
+  font-size: 24px;
 }
 
 /* ************
@@ -1738,6 +1756,14 @@ RESPONSIVE DESIGN
   .idiomasMobile {
     display: flex !important;
   }
+
+  .c_headet_int {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .cont_tab_sec .c_img_equipos {
+    grid-template-columns: 1fr;
+  }
 }
 @media screen and (max-width: 768px) {
   header .logo_header a img {
@@ -1783,6 +1809,43 @@ RESPONSIVE DESIGN
     border: 0;
     padding: 0;
   }
+
+  .c_headet_int {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .c_headet_int {
+    grid-template-columns: 1fr;
+  }
+
+  .form_col {
+    flex-direction: column;
+  }
+
+  .menu_tab_sec {
+    position: absolute;
+    top: 55px;
+    left: 0;
+    background-color: #FFF;
+    padding: 20px !important;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 8px;
+    z-index: 1;
+    transform: translateX(-100vw);
+  }
+  .menu_tab_sec.active {
+    transform: translateX(0vw);
+  }
+
+  .mMobile_tab_sec {
+    display: flex;
+  }
+
+  .cont_tab_pri {
+    grid-template-columns: 30px 1fr;
+    gap: 10px;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -1791,5 +1854,13 @@ RESPONSIVE DESIGN
 
   .s_404 {
     padding: 0 0 50px;
+  }
+
+  .navtabs_pri ul li a {
+    font-size: 13px;
+  }
+
+  .navtabs_pri ul {
+    gap: 8px;
   }
 }/*# sourceMappingURL=style.css.map */
