interna quienes somos con response OK

--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,11 @@ h1 {
 }
 
 .swiper-button-next {
-  right: 20px;
+  right: 0px;
 }
 
 .swiper-button-prev {
-  left: 20px;
+  left: 0px;
 }
 
 .c_cta {
@@ -1074,7 +1074,7 @@ footer .subfooter {
 
 .c_testimonios {
   position: relative;
-  padding: 0 40px;
+  padding: 0 20px;
   box-sizing: border-box;
 }
 .c_testimonios .swiper-slide {
@@ -1653,6 +1653,10 @@ button[type=submit] {
 RESPONSIVE DESIGN
 ************ */
 @media screen and (max-width: 1050px) {
+  * {
+    font-size: 15px;
+  }
+
   .spacer {
     height: 70px;
   }
@@ -1766,6 +1770,13 @@ RESPONSIVE DESIGN
   }
 }
 @media screen and (max-width: 768px) {
+  .tit_section {
+    font-size: 1.6em;
+  }
+  .tit_section.c_lightblue {
+    font-size: 24px;
+  }
+
   header .logo_header a img {
     width: 160px;
   }
@@ -1825,14 +1836,15 @@ RESPONSIVE DESIGN
   .menu_tab_sec {
     position: absolute;
     top: 55px;
-    left: 0;
+    left: -21px;
     background-color: #FFF;
     padding: 20px !important;
     box-sizing: border-box;
-    width: 100%;
-    border-radius: 8px;
+    border-radius: 0 8px 8px 0;
     z-index: 1;
     transform: translateX(-100vw);
+    border: 1px solid #D2D2D2;
+    transition: 300ms ease-out;
   }
   .menu_tab_sec.active {
     transform: translateX(0vw);
@@ -1845,6 +1857,50 @@ RESPONSIVE DESIGN
   .cont_tab_pri {
     grid-template-columns: 30px 1fr;
     gap: 10px;
+  }
+
+  .cont_tab_pri .navtab_sec ul li .link_tab_sec {
+    border-radius: 6px;
+  }
+
+  .s_header_int picture img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+  }
+
+  .s_header_int {
+    max-height: initial;
+    height: initial;
+    flex-direction: column;
+  }
+
+  .s_header_int picture {
+    max-height: 160px;
+    position: relative;
+    overflow: hidden;
+  }
+  .s_header_int picture img {
+    max-height: 160px;
+  }
+
+  .head_desc_int {
+    padding: 0;
+    background-color: transparent;
+  }
+
+  .c_items_slider {
+    padding: 0 30px;
+  }
+
+  .swiper-button-next, .swiper-button-prev {
+    width: 30px;
+    height: 30px;
+  }
+
+  .swiper-button-next:after, .swiper-button-prev:after {
+    font-size: 16px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -1862,5 +1918,9 @@ RESPONSIVE DESIGN
 
   .navtabs_pri ul {
     gap: 8px;
+  }
+
+  .txt_item_s {
+    font-size: 14px;
   }
 }/*# sourceMappingURL=style.css.map */
