--- a/sass/style.scss
+++ b/sass/style.scss
@@ -163,6 +163,7 @@ h1{
         font-size: 16px;
         font-weight: 700;
         padding: 4px 12px;
+        max-width: 70px;
     }
     &.link{
         background-color: transparent;
@@ -201,7 +202,9 @@ h1{
         }
     }
 }
-
+.grey_bg{
+    background-color: #E5E5E5;
+}
 .swiper {
     width: 100%;
     height: 100%;
@@ -447,6 +450,7 @@ header{
                         justify-content: center;
                         font-size: 16px;
                         cursor: pointer;
+                        min-width: initial;
                     }
                 }
             }
@@ -1949,6 +1953,13 @@ RESPONSIVE DESIGN
     }
     .w100_line::before, .w100_line::after{
         display: none;
+    }
+    .btn.cta_reserva_cita{
+        transform: rotate(270deg);
+        max-width: initial;
+        padding: 8px 12px;
+        right: -54px;
+        border-radius: 8px 8px 0 0;
     }
 }
 @media screen and (max-width:480px){
