--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1647,12 +1647,14 @@ button[type=submit]{
 .cont_search_mobile{
     display: none;
     width: 100%;
-    grid-column: 1/3;
-    display: grid;
-    grid-template-columns: 60px 1fr;
-    align-items: center;
-    justify-content: center;
     padding: 14px 0 0;
+    grid-column: 1/3;
+    .sub_contain{
+        align-items: center;
+        justify-content: center;
+        grid-template-columns: 60px 1fr;
+        display: grid;
+    }
     input{
         height: 36px;
         border: 0;
