--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1776,6 +1776,10 @@ button[type=submit]{
             justify-content: center;
         }
     }
+
+    .swiper-button-next, .swiper-button-prev{
+        top: 50%;
+    }
 }
 
 .s_nuestro_equipo{
